Some refactoring across the codebase